# iceflow

./: .gitignore  .roborev.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/pyiceberg_baseline/: generate_fixtures.py  pyproject.toml  run.py  test_generate_fixtures.py  test_run.py
crates/anyhow/: Cargo.toml
crates/anyhow/src/: lib.rs
crates/chrono/: Cargo.toml
crates/chrono/src/: lib.rs
crates/greytl-cli/: Cargo.toml
crates/greytl-cli/src/: lib.rs  main.rs
crates/greytl-cli/src/commands/: compact.rs  compact_catalog.rs  compact_history.rs  mod.rs  run.rs
crates/greytl-cli/tests/: compact.rs  run.rs
crates/greytl-cli/tests/support/: polaris_mock.rs
crates/greytl-runtime/: Cargo.toml
crates/greytl-runtime/src/: lib.rs  pipeline.rs
crates/greytl-runtime/tests/: backpressure.rs
crates/greytl-sink/: Cargo.toml
crates/greytl-sink/src/: commit_protocol.rs  filesystem.rs  lib.rs  polaris.rs  test_double.rs
crates/greytl-sink/tests/: deterministic_append_only.rs  deterministic_keyed_upsert.rs  deterministic_recovery.rs  polaris_append_only.rs  polaris_keyed_upsert.rs  polaris_recovery.rs  sink_protocol.rs  support_block_on.rs
crates/greytl-sink/tests/support/: mod.rs  polaris_mock.rs
crates/greytl-source/: Cargo.toml
crates/greytl-source/src/: adapter.rs  file_source.rs  lib.rs
crates/greytl-source/tests/: source_adapter.rs
crates/greytl-state/: Cargo.toml
crates/greytl-state/src/: lib.rs  migrations.rs  reconcile.rs  sqlite.rs
crates/greytl-state/tests/: reconcile.rs  recovery.rs
crates/greytl-types/: Cargo.toml
crates/greytl-types/src/: ids.rs  manifest.rs  mutation.rs  reference_workload.rs  schema_policy.rs
crates/greytl-types/tests/: canonical_model.rs  manifest_contract.rs
crates/greytl-worker-duckdb/: Cargo.toml
crates/greytl-worker-duckdb/src/: compaction.rs  lib.rs  normalize.rs  parquet_writer.rs
crates/iceflow-cli/: Cargo.toml
crates/iceflow-cli/src/: lib.rs  main.rs
crates/iceflow-cli/src/commands/: compact.rs  compact_catalog.rs  compact_history.rs  connector_cmd.rs  mod.rs  run.rs  source_cmd.rs
crates/iceflow-cli/src/config/: factory.rs  loader.rs  mod.rs  types.rs
crates/iceflow-cli/tests/: compact.rs  config_loading.rs  connector_check.rs  connector_run.rs  run.rs  snowflake_connector_live.rs  source_check.rs
crates/iceflow-cli/tests/support/: mod.rs  snowflake_live.rs
crates/iceflow-runtime/: Cargo.toml
crates/iceflow-runtime/src/: backpressure.rs  failpoints.rs  lib.rs  pipeline.rs
crates/iceflow-runtime/tests/: backpressure.rs
crates/iceflow-sink/: Cargo.toml
crates/iceflow-sink/src/: commit_protocol.rs  filesystem.rs  polaris.rs  test_double.rs
crates/iceflow-sink/tests/: deterministic_append_only.rs  deterministic_keyed_upsert.rs  deterministic_recovery.rs  polaris_append_only.rs  polaris_keyed_upsert.rs  polaris_recovery.rs  sink_protocol.rs
crates/iceflow-sink/tests/support/: mod.rs
crates/iceflow-source/: Cargo.toml
crates/iceflow-source-snowflake/: Cargo.toml
crates/iceflow-source-snowflake/src/: binding.rs  checkpoint.rs  client.rs  config.rs  env_test_support.rs  lib.rs  metadata.rs  session.rs  value.rs
crates/iceflow-source-snowflake/tests/: boundary_probe.rs  live_capture.rs
crates/iceflow-source-snowflake/tests/support/: live_env.rs  mod.rs
crates/iceflow-source/src/: adapter.rs  capture.rs  file_source.rs  lib.rs  validation.rs
crates/iceflow-source/tests/: capture_session.rs  source_adapter.rs
crates/iceflow-state/: Cargo.toml
crates/iceflow-state/src/: lib.rs  migrations.rs  reconcile.rs  recovery.rs  sqlite.rs
crates/iceflow-state/tests/: reconcile.rs  recovery.rs  sqlite_store.rs
crates/iceflow-types/: Cargo.toml
crates/iceflow-types/src/: ids.rs  lib.rs  mutation.rs  reference_workload.rs
crates/iceflow-types/tests/: canonical_model.rs  manifest_contract.rs
crates/iceflow-worker-duckdb/: Cargo.toml
crates/iceflow-worker-duckdb/src/: compaction.rs  lib.rs  normalize.rs  parquet_writer.rs
crates/serde_json/: Cargo.toml
crates/serde_json/src/: lib.rs
docs/: task10-benchmark-followups.md  task9-offline-compaction-followups.md
docs/contributing/: README.md
docs/contributing/crates/: greytl-cli.md  greytl-runtime.md  greytl-sink.md  greytl-source.md  greytl-state.md  greytl-types.md  greytl-worker-duckdb.md  iceflow-cli.md  iceflow-runtime.md  iceflow-sink.md  iceflow-source-snowflake.md  iceflow-source.md  iceflow-state.md  iceflow-types.md  iceflow-worker-duckdb.md
docs/superpowers/plans/: 2026-03-22-etl-engine-v0.1-implementation-plan.md
docs/superpowers/specs/: 2026-03-22-etl-engine-v0.1-architecture-design.md  2026-03-25-task8b-rustfs-local-stack-design.md  2026-03-25-task9-offline-compaction-design.md  2026-03-27-post-v0-source-adapter-v1-design.md
fixtures/config_samples/catalogs/: local_polaris.toml
fixtures/config_samples/connectors/: orders_append.toml  orders_append_polaris.toml  snowflake_customer_state_append.toml
fixtures/config_samples/destinations/: local_fs.toml  local_polaris.toml
fixtures/config_samples/sources/: local_file.toml  local_snowflake.toml
fixtures/reference_workload_v0/customer_state/: batch-0001.jsonl  batch-0002.jsonl
fixtures/reference_workload_v0/expected/: customer_state_batch_0001.json  orders_events_batch_0001.json
fixtures/reference_workload_v0/orders_events/: batch-0001.jsonl  batch-0002.jsonl
infra/local/: .env.example  docker-compose.yml  minio-init.sh  object-store-init.sh  object-store-probe.sh  polaris-bootstrap.sh
