[workspace]
members = [
    "crates/anyhow",
    "crates/chrono",
    "crates/serde_json",
    "crates/iceflow-types",
    "crates/iceflow-state",
    "crates/iceflow-source",
    "crates/iceflow-source-snowflake",
    "crates/iceflow-worker-duckdb",
    "crates/iceflow-sink",
    "crates/iceflow-runtime",
    "crates/iceflow-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
