[package]
name = "greytl-sink"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { path = "../anyhow" }
greytl-state = { path = "../greytl-state" }
greytl-types = { path = "../greytl-types" }

[dev-dependencies]
chrono = { path = "../chrono" }
greytl-source = { path = "../greytl-source" }
greytl-worker-duckdb = { path = "../greytl-worker-duckdb" }
