[package]
name = "greytl-sink"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { path = "../anyhow" }
greytl-state = { path = "../greytl-state" }
greytl-types = { path = "../greytl-types" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json_ext = { package = "serde_json", version = "1.0.149" }

[dev-dependencies]
chrono = { path = "../chrono" }
greytl-source = { path = "../greytl-source" }
greytl-worker-duckdb = { path = "../greytl-worker-duckdb" }
serde_json = { path = "../serde_json" }
