[package]
name = "greytl-worker-duckdb"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { path = "../anyhow" }
chrono = { path = "../chrono" }
greytl-source = { path = "../greytl-source" }
greytl-types = { path = "../greytl-types" }
libduckdb-sys = { version = "1.10501.0", default-features = false, features = ["bundled", "parquet"] }
serde_json = { path = "../serde_json" }
