[package]
name = "iceflow-sink"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { path = "../anyhow" }
iceflow-state = { path = "../iceflow-state" }
iceflow-types = { path = "../iceflow-types" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json_ext = { package = "serde_json", version = "1.0.149" }

[dev-dependencies]
chrono = { path = "../chrono" }
iceflow-source = { path = "../iceflow-source" }
iceflow-worker-duckdb = { path = "../iceflow-worker-duckdb" }
serde_json = { path = "../serde_json" }
